--- a/themes/diaspora/layout/post.ejs
+++ b/themes/diaspora/layout/post.ejs
@@ -3,4 +3,5 @@
     <div class="section">
         <%- partial("_partial/post/article")%>
     </div>
+    <%- partial("_partial/post/livere")%>
 </div>
